--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
     <script type="text/javascript" src="js/Logger.js"></script>
     <script type="text/javascript" src="js/Item.js"></script>
     <script type="text/javascript" src="js/Pokemon.js"></script>
+    <script type="text/javascript" src="js/Pokedex.js"></script>
     <script type="text/javascript" src="js/Player.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
   </body>
