modified:   config/userdata.js.example 	modified:   css/main.css 	modified:   index.html 	modified:   js/main.js

--- a/index.html
+++ b/index.html
@@ -58,6 +58,18 @@
                   </div>
                   <br>
                 </li>
+				 <li>
+                  Street View
+                  <div class="switch">
+                    <label>
+                      Off
+                      <input type="checkbox" id="streetViewOn">
+                      <span class="lever"></span>
+                      On
+                    </label>
+                  </div>
+                  <br>
+                </li>
                 <li>
                   Logs
                   <a class="indigo waves-effect waves-light btn" id="logs-button">Logs</a>
@@ -89,6 +101,15 @@
       <div class="card white">
         <div class="card-content black-text">
           <b>Logs</b>
+        </div>
+      </div>
+    </div>
+	
+	
+	<div id="streetview-panel">
+      <div class="card white">
+        <div class="card-content black-text">
+          <b>streetview goes here</b>
         </div>
       </div>
     </div>
