--- a/app/index.html
+++ b/app/index.html
@@ -26,8 +26,7 @@
 <![endif]-->
 
 <!-- Add your site or application content here -->
-<div id="wrapper">
-
+<div id="wrapper" ng-controller="MainCtrl" ng-class="{'sidebar_hidden': !sidebar_shown}">
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -125,28 +124,25 @@
                 </ul>
             </li>
             <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> John Smith <b
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> My_awesome_bot <b
                         class="caret"></b></a>
                 <ul class="dropdown-menu">
                     <li>
-                        <a href="#"><i class="fa fa-fw fa-user"></i> Profile</a>
+                        <a href="#"><i class="fa fa-fw fa-user"></i> Bot_2</a>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-fw fa-envelope"></i> Inbox</a>
+                        <a href="#"><i class="fa fa-fw fa-user"></i> bot_3</a>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-fw fa-gear"></i> Settings</a>
+                        <a href="#"><i class="fa fa-fw fa-user"></i> bot_4</a>
                     </li>
                     <li class="divider"></li>
-                    <li>
-                        <a href="#"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
-                    </li>
                 </ul>
             </li>
         </ul>
         <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
         <div class="collapse navbar-collapse navbar-ex1-collapse">
-            <ul class="nav navbar-nav side-nav">
+            <ul class="nav navbar-nav side-nav" ng-show="sidebar_shown">
                 <li class="active">
                     <a href="index.html"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
                 </li>
@@ -184,6 +180,7 @@
                     <a href="index-rtl.html"><i class="fa fa-fw fa-dashboard"></i> RTL Dashboard</a>
                 </li>
             </ul>
+            <div class="sidebar_toggle" ng-click="sidebar_shown = !sidebar_shown" ng-cloak>{{ (sidebar_shown) ? '<<' : '>>'}}</div>
         </div>
         <!-- /.navbar-collapse -->
     </nav>
@@ -191,9 +188,7 @@
     <div id="page-wrapper">
 
         <div class="container-fluid">
-            <div map-lazy-load="https://maps.google.com/maps/api/js">
                 <ng-map auto-size-container center="41,-87" zoom="3"></ng-map>
-            </div>
         </div>
         <!-- /.container-fluid -->
 
@@ -216,6 +211,7 @@
     ga('send', 'pageview');
 </script>
 
+<script src="//maps.google.com/maps/api/js?libraries=visualization,drawing,geometry,places"></script>
 <!-- build:js(.) scripts/vendor.js -->
 <!-- bower:js -->
 <script src="bower_components/jquery/dist/jquery.js"></script>
