Add simple EventService

--- a/app/index.html
+++ b/app/index.html
@@ -166,6 +166,7 @@
 <script src="scripts/app.js"></script>
 <script src="scripts/controllers/main.js"></script>
 <script src="scripts/directives/autosizecontainer.js"></script>
+<script src="scripts/services/eventservice.js"></script>
 <!-- endbuild -->
 </body>
 </html>
