Added letter spacing to buttons. Fixed the offset of the right button.

--- a/app/index.html
+++ b/app/index.html
@@ -64,7 +64,7 @@
 
             </ul>
           </li>
-          <li class="dropdown">
+          <li class="dropdown offset-right">
             <button class="dropdown-toggle btn btn-default" data-toggle="dropdown" type="button">POKEDEX</button>
             <ul class="dropdown-menu message-dropdown pokedex">
               <li class="message-preview" ng-repeat="pokemon in pokemons | filter : search | orderBy : 'cp' : true">
