--- a/app/index.html
+++ b/app/index.html
@@ -126,6 +126,8 @@
 <script src="bower_components/sio-client/socket.io.js"></script>
 <script src="bower_components/ngmap/build/scripts/ng-map.js"></script>
 <script src="bower_components/socket.io-client/socket.io.js"></script>
+<script src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
+<script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 
