Working items, pokebag and pokedex

--- a/app/index.html
+++ b/app/index.html
@@ -141,6 +141,10 @@
 <script src="scripts/controllers/map.js"></script>
 <script src="scripts/controllers/menu.js"></script>
 <script src="scripts/services/toolservice.js"></script>
+<script src="scripts/controllers/item.js"></script>
+<script src="scripts/directives/fallbacksrc.js"></script>
+<script src="scripts/controllers/pokebag.js"></script>
+<script src="scripts/controllers/pokedex.js"></script>
 <!-- endbuild -->
 <script src="config/userdata.js"></script>
 </body>
