--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="bower_components/components-font-awesome/css/font-awesome.css" />
+    <link rel="stylesheet" href="bower_components/jquery-ui/themes/base/jquery-ui.min.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -105,6 +106,7 @@
 <!-- build:js(.) scripts/vendor.js -->
 <!-- bower:js -->
 <script src="bower_components/jquery/dist/jquery.js"></script>
+<script src="bower_components/jquery-ui/jquery-ui.min.js"></script>
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 <script src="bower_components/angular-animate/angular-animate.js"></script>
@@ -134,6 +136,8 @@
 <script src="scripts/directives/fallbacksrc.js"></script>
 <script src="scripts/controllers/pokebag.js"></script>
 <script src="scripts/controllers/pokedex.js"></script>
+<script src="scripts/directives/consoleoutput.js"></script>
+<script src="scripts/directives/autoscroll.js"></script>
 <!-- endbuild -->
 <script src="config/userdata.js"></script>
 </body>
