Fix jshint errors, fix google maps api key

--- a/app/index.html
+++ b/app/index.html
@@ -101,7 +101,9 @@
 <!-- /#wrapper -->
 
 
-<script src="//maps.google.com/maps/api/js?libraries=visualization,drawing,geometry,places"></script>
+
+<script src="config/userdata.js"></script>
+<script src="scripts/gmap.js"></script>
 <!-- build:js(.) scripts/vendor.js -->
 <!-- bower:js -->
 <script src="bower_components/jquery/dist/jquery.js"></script>
@@ -122,7 +124,6 @@
 <!-- endbuild -->
 
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
-<script src="config/userdata.js"></script>
 <script src="scripts/app.js"></script>
 <script src="scripts/controllers/main.js"></script>
 <script src="scripts/directives/autosizecontainer.js"></script>
@@ -138,6 +139,5 @@
 <script src="scripts/directives/consoleoutput.js"></script>
 <script src="scripts/directives/autoscroll.js"></script>
 <!-- endbuild -->
-<script src="config/userdata.js"></script>
 </body>
 </html>
