Love you too google maps

--- a/app/index.html
+++ b/app/index.html
@@ -103,7 +103,7 @@
 
 
 <script src="config/userdata.js"></script>
-<script src="scripts/gmap.js"></script>
+<!--<script src="scripts/gmap.js"></script>-->
 <!-- build:js(.) scripts/vendor.js -->
 <!-- bower:js -->
 <script src="bower_components/jquery/dist/jquery.js"></script>
