update trainer location through websocket

--- a/index.html
+++ b/index.html
@@ -97,5 +97,6 @@
     <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
     <script type="text/javascript" src="config/userdata.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="js/socket.js"></script>
   </body>
 </html>
