--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
     <div id="map"></div>
     <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
     <script type="text/javascript" src="config/userdata.js"></script>
+    <script type="text/javascript" src="js/util.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
   </body>
 </html>
