minor fix on the log panel layout

--- a/index.html
+++ b/index.html
@@ -89,6 +89,8 @@
       <div class="card white">
         <div class="card-content black-text">
           <b>Logs</b>
+          <hr>
+          <div id="logs-output"></div>
         </div>
       </div>
     </div>
