Updated main.js file. Added spun_pokestop to the notification filter and fix the layout of logs window.

--- a/index.html
+++ b/index.html
@@ -88,9 +88,11 @@
     <div id="logs-panel">
       <div class="card white">
         <div class="card-content black-text">
-          <b>Logs</b>
-          <hr>
-          <div id="logs-output"></div>
+          <div style="position: fixed; width: 605px; margin-top: -10px; padding-top: 10px;" class="white">
+            <b>Logs</b>
+            <hr style="margin-bottom: 0;" />
+          </div>
+          <div id="logs-output" style="padding-top: 35px;"></div>
         </div>
       </div>
     </div>
