--- a/index.html
+++ b/index.html
@@ -1,17 +1,23 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
   <head>
-    <title>Web UI</title>
+    <title>Non Bot UI</title>
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js" type="text/javascript"></script>
     <!--Import Google Icon Font-->
     <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css" type="text/css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css" type="text/css">
     <!-- Compiled and minified JavaScript -->
-    <script src="//cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js" type="text/javascript" ></script>
+ <link rel="stylesheet" type="text/css" href="//cdn.rawgit.com/swisnl/jQuery-contextMenu/master/dist/jquery.contextMenu.min.css">
+
+    <script src="//cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js" type="text/javascript" ></script>
     <link rel="stylesheet" href="css/main.css" type="text/css">
+    <link rel="icon" type="image/png" href="favicon_128x128.png">
+    <link rel="icon" type="image/png" href="favicon_64x64.png">
+    <link rel="icon" type="image/png" href="favicon_32x32.png">
+    <link rel="icon" type="image/png" href="favicon_16x16.png">
   </head>
   <body>
     <div class="container" id="menu">
@@ -59,7 +65,26 @@
                   <br>
                 </li>
                 <li>
-                  Logs
+                  Send desktop notifications
+                  <div class="switch">
+                    <label>
+                      Off
+                      <input type="checkbox" id="switchNotifications">
+                      <span class="lever"></span>
+                      On
+                    </label>
+                  </div>
+                  <br>
+                </li>
+                <li>
+                  <a class='waves-effect waves-light dropdown-button btn' data-activates='mapStyles'>Map Style</a>
+                  <ul id='mapStyles' class='dropdown-content'>
+                    <li><a data-style="maps">Maps</a></li>
+                    <li class="divider"></li>
+                    <li><a data-style="satellite">Satellite</a></li>
+                  </ul>
+                </li>
+                <li>
                   <a class="indigo waves-effect waves-light btn" id="logs-button">Logs</a>
                 </li>
               </ul>
@@ -68,7 +93,27 @@
         </ul>
         </div>
       </div>
-      <div class="row" id="trainers">
+      <div class="row" id="trainers"></div>
+      <div class="row" id="nearby_pokemons"></div>
+      <div class="row">
+        <div class="col s12">
+          <ul class="collapsible" data-collapsible="accordion">
+            <li>
+              <div class="collapsible-header"><i class="material-icons">location_on</i>Paths</div>
+              <div class="collapsible-body">
+                <ul>
+                  <li><a class="waves-effect waves-light btn tooltipped" id="path_add" data-position="left" data-delay="50" data-tooltip="Add a marker at the center of the map">Add</a></li>
+                  <br>
+                  <li><a class="waves-effect waves-light btn disabled tooltipped" id="path_delete" data-position="left" data-delay="50" data-tooltip="Delete previous marker">Delete</a></li>
+                  <br>
+                  <li><a class="waves-effect waves-light btn disabled tooltipped" id="paths_download" data-position="left" data-delay="50" data-tooltip="Generate and download path file">Download</a></li>
+                  <br>
+                  <li><a class="waves-effect waves-light btn disabled tooltipped" id="paths_clear" data-position="left" data-delay="50" data-tooltip="Clear all existing markers">Clear</a></li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
 
@@ -88,19 +133,89 @@
     <div id="logs-panel">
       <div class="card white">
         <div class="card-content black-text">
-          <div style="position: fixed; width: 605px; margin-top: -10px; padding-top: 10px;" class="white">
-            <b>Logs</b>
-            <hr style="margin-bottom: 0;" />
-          </div>
-          <div id="logs-output" style="padding-top: 35px;"></div>
+          <b>Logs</b>
+          <div id="logs"></div>
         </div>
       </div>
     </div>
 
     <div id="map"></div>
-    <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
+    <!-- Promise library -->
+    <script src="//cdn.jsdelivr.net/bluebird/3.4.1/bluebird.min.js"></script>
+    <!-- MomentJS -->
+  <script type="text/javascript" src="//cdn.rawgit.com/swisnl/jQuery-contextMenu/master/dist/jquery.contextMenu.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.14.1/moment.min.js"></script>
+   <script src="https://cdn.jsdelivr.net/js-cookie/2.2.0/js.cookie.js"></script>
+    <script type="text/javascript" src="//cdn.socket.io/socket.io-1.4.5.js"></script>
     <script type="text/javascript" src="config/userdata.js"></script>
-    <script type="text/javascript" src="js/util.js"></script>
+<script type="text/javascript" src="js/util.js"></script> 
+
     <script type="text/javascript" src="js/main.js"></script>
+<script src="js/tooltip.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/stupidtable/0.0.1/stupidtable.min.js"></script>
+<script>
+		$('table.sortable').stupidtable();
+		$('table.sortable').each(function () {
+			var t = $(this);
+			t.find('th').eq(4).trigger('click');
+
+			setTimeout(function () {
+				t.find('tr').each(function (i) {
+					$(this).children('td').first().text(i);
+				})
+			}, 20);
+		});
+
+		(function () {
+			$('table.sortable tbody tr').each(function () {
+				var t = $(this), type = t.data('type');
+				t.find('td').eq(2).html('<span class="type ' + type + ' move-tooltip">' + type.substr(13,1) + type.toLowerCase().substr(14) + '</span>');
+			});
+		}());
+
+		(function () {
+			var active = null;
+
+			$('.filter').on('click', '.type', function (e) {
+				e.preventDefault();
+				var t = $(this);
+				if (t.hasClass('inactive'))
+				{
+					t.removeClass('inactive').siblings().addClass('inactive');
+					active = t.data('type');
+					location.hash = t.text().toLowerCase();
+				}
+				else
+				{
+					if (active)
+					{
+						active = null;
+						t.siblings().removeClass('inactive');
+						location.hash = '';
+					}
+					else
+					{
+						t.removeClass('inactive').siblings().addClass('inactive');
+						active = t.data('type');
+						location.hash = t.text().toLowerCase();
+					}
+				}
+
+				$('.grid table tbody tr').each(function () {
+					$(this).toggle(active === null || $(this).data('type') == active);
+				});
+			});
+
+			var hash = location.hash.substr(1);
+			$('.filter .type').each(function () {
+				if ($(this).text().toLowerCase() == hash)
+					$(this).trigger('click');
+			});
+		}());
+
+	</script>
+<script type="text/javascript" src="js/Paths.js"></script>
+
+
   </body>
 </html>
