fixed some layout and buttons

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
       <div class="card white">
         <div class="card-content black-text">
           <div style="position: fixed; width: 605px; margin-top: -10px; padding-top: 10px;" class="white">
+            <span id="close-logs">×</span>
             <b>Logs</b>
             <hr style="margin-bottom: 0;" />
           </div>
