--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="collapsible-body">
               <ul id="optionsList">
                 <li>
-                  Pan
+                  Centering
                   <div class="switch">
                     <label>
                       Off
