visualized current pokemon sort order + added seen/caught toggles

--- a/index.html
+++ b/index.html
@@ -78,7 +78,10 @@
             <div class="card-content black-text">
               <span class="card-title" id="subtitle">Submenu</span>
               <span id="close">×</span>
-              <div class="row" id="sortButtons"></div>
+              <div class="row"> 
+                <div class="col right" id="sortButtons"></div>
+                <div class="col" id="toggleButtons"></div>
+              </div>
               <div id="subcontent"></div>
             </div>
           </div>
