changed from toggle to filter + added unseen/uncaught filter + headline pokemon count updates automatically

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               <span id="close">×</span>
               <div class="row"> 
                 <div class="col right" id="sortButtons"></div>
-                <div class="col" id="toggleButtons"></div>
+                <div class="col" id="filterButtons"></div>
               </div>
               <div id="subcontent"></div>
             </div>
