fixed css for smaller displays

--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
             <div class="card-content black-text">
               <span class="card-title" id="subtitle">Submenu</span>
               <span id="close">×</span>
-              <div class="row"> 
-                <div class="col right" id="sortButtons"></div>
-                <div class="col" id="filterButtons"></div>
+              <div class="row">
+                <div class="col l6 m12 s12" id="filterButtons"></div>
+                <div class="col l6 m12 s12" id="sortButtons"></div>
               </div>
               <div id="subcontent"></div>
             </div>
