--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     </div>
 
     <div id="map"></div>
-    <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.5/socket.io.js"></script>
     <script type="text/javascript" src="config/userdata.js"></script>
     <script type="text/javascript" src="js/util.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
