--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
                   <br>
                 </li>
                 <li>
+                  Events
+                  <a class="indigo waves-effect waves-light btn" id="events-button">Events</a>
+                </li>
+                <li>
                   Logs
                   <a class="indigo waves-effect waves-light btn" id="logs-button">Logs</a>
                 </li>
@@ -101,6 +105,20 @@
       </div>
     </div>
 
+    <div id="events-panel">
+      <div class="card black">
+        <div class="card-content white-text">
+          <div style="position: fixed; width: 605px; margin-top: -10px; padding-top: 10px;" class="black">
+            <span id="close-events">×</span>
+            <b>Events</b>
+            <hr style="margin-bottom: 0;" />
+          </div>
+          <div id="events-output" style="padding-top: 35px;"></div>
+        </div>
+      </div>
+    </div>
+
+    
     <div id="map"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.5/socket.io.js"></script>
     <script type="text/javascript" src="config/userdata.js"></script>
