--- a/index.html
+++ b/index.html
@@ -14,14 +14,19 @@
     <link rel="stylesheet" href="css/main.css" type="text/css">
   </head>
   <body>
-    <div class="container" id="menu">
-      <div class="row" id="options">
-        <div class="col s12">
+
+  
+  <ul id="slide-out" class="side-nav">
+
+   <div class="containerT" id="menu">
+      <div class="rowT" id="options">
+        <div class="colT s12T">
           <ul class="collapsible" data-collapsible="accordion">
           <li>
-            <div class="collapsible-header"><i class="material-icons">settings</i>Settings</div>
+            <div class="collapsible-header"><i class="material-icons">settings</i>Settings
+            </div>
             <div class="collapsible-body">
-              <ul id="optionsList">
+              <ul class="collapsible" id="optionsList">
                 <li>
                   Centering
                   <div class="switch">
@@ -72,9 +77,14 @@
         </ul>
         </div>
       </div>
-      <div class="row" id="trainers">
+      <div class="rowT" id="trainers">
       </div>
     </div>
+
+  </ul>
+    <a href="#" data-activates="slide-out" class="button-collapse show-on-large"><i class="material-icons" style="height: 40px;">menu</i></a>
+          
+  
 
     <div class="container" id="submenu">
         <div class="col s12">
@@ -108,7 +118,7 @@
     <div id="events-panel">
       <div class="card black">
         <div class="card-content white-text">
-          <div style="position: fixed; width: 605px; margin-top: -10px; padding-top: 10px;" class="black">
+          <div style="position: fixed; width: 80%; margin-top: -10px; padding-top: 10px;" class="black">
             <span id="close-events">×</span>
             <b>Events</b>
             <hr style="margin-bottom: 0;" />
