--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
 
   
-  <ul id="slide-out" class="side-nav">
+  <ul id="slide-out" class="side-nav fixed">
 
    <div class="containerT" id="menu">
       <div class="rowT" id="options">
@@ -82,7 +82,7 @@
     </div>
 
   </ul>
-    <a href="#" data-activates="slide-out" class="button-collapse show-on-large"><i class="material-icons" style="height: 40px;">menu</i></a>
+    <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons" style="height: 40px;">menu</i></a>
           
   
 
@@ -118,7 +118,7 @@
     <div id="events-panel">
       <div class="card black">
         <div class="card-content white-text">
-          <div style="position: fixed; width: 80%; margin-top: -10px; padding-top: 10px;" class="black">
+          <div style="position: fixed; width: 75%; margin-top: -10px; padding-top: 10px;" class="black">
             <span id="close-events">×</span>
             <b>Events</b>
             <hr style="margin-bottom: 0;" />
