--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </div>
 
   </ul>
-    <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons" style="height: 40px;">menu</i></a>
+    <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons" style="height: 40px;">menu</i><span id="UI-Title"></span></a>
     <div class="container" id="submenu">
         <div class="col s12">
           <div class="card white">
