--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Web UI</title>
+    <title>PokemonGo-Bot Web UI</title>
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js" type="text/javascript"></script>
@@ -52,7 +52,7 @@
                   <br>
                 </li>
                 <li>
-                  Bot Path
+                  Bot path
                   <div class="switch">
                     <label>
                       Off
@@ -64,11 +64,10 @@
                   <br>
                 </li>
                 <li>
-                  Events
                   <a class="indigo waves-effect waves-light btn" id="events-button">Events</a>
                 </li>
+				<br>
                 <li>
-                  Logs
                   <a class="indigo waves-effect waves-light btn" id="logs-button">Logs</a>
                 </li>
               </ul>
@@ -115,7 +114,7 @@
     <div id="events-panel">
       <div class="card black">
         <div class="card-content white-text">
-          <div style="position: fixed; width: 75%; margin-top: -10px; padding-top: 10px;" class="black">
+          <div style="position: fixed; width: 100%; margin-top: -10px; padding-top: 10px;" class="black">
             <span id="close-events">×</span>
             <b>Events</b>
             <hr style="margin-bottom: 0;" />
