new structure for oop and for future fix and remodoling

--- a/index.html
+++ b/index.html
@@ -129,6 +129,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.5/socket.io.js"></script>
     <script type="text/javascript" src="config/userdata.js"></script>
     <script type="text/javascript" src="js/util.js"></script>
+    <script type="text/javascript" src="js/global_vars_utils.js"></script>
+    <script type="text/javascript" src="js/users_socket_io.js"></script>
+    <script type="text/javascript" src="js/map_view_manager.js"></script>    
     <script type="text/javascript" src="js/main.js"></script>
   </body>
 </html>
