fix the event title box is longer then the events logs box

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <div id="events-panel">
       <div class="card black">
         <div class="card-content white-text">
-          <div style="position: fixed; width: 100%; margin-top: -10px; padding-top: 10px;" class="black">
+          <div style="position: relative; width: 100%; margin-top: -10px; padding-top: 10px;" class="black">
             <span id="close-events">×</span>
             <b>Events</b>
             <hr style="margin-bottom: 0;" />
