fix close button misplacest and refix the events title layout

--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
     <div id="events-panel">
       <div class="card black">
         <div class="card-content white-text">
-          <div style="position: relative; width: 100%; margin-top: -10px; padding-top: 10px;" class="black">
-            <span id="close-events">×</span>
+          <div id="events-title" style="position: fixed; margin-top: -10px; padding-top: 10px;" class="black">
+            <span id="close-events" style="margin-right:10px;margin-top:2px;">×</span>
             <b>Events</b>
             <hr style="margin-bottom: 0;" />
           </div>
