fix menu layout misplace

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="colT s12T">
           <ul class="collapsible" data-collapsible="accordion">
           <li>
-            <div class="collapsible-header"><i class="material-icons">settings</i>Settings
+            <div class="collapsible-header" style="display:flex;align-items: center;padding: 0 15px;"><i class="material-icons">settings</i>Settings
             </div>
             <div class="collapsible-body">
               <ul class="collapsible" id="optionsList">
