fixed menu button and managed the states for small screen and big screen

--- a/index.html
+++ b/index.html
@@ -81,7 +81,10 @@
     </div>
 
   </ul>
-    <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons" style="height: 40px;">menu</i><span id="UI-Title"></span></a>
+    <a href="#" data-activates="slide-out" class="button-collapse page-title-container">
+      <i class="material-icons" style="margin: auto;margin-left: 10px;margin-right: 10px;">menu</i>
+      <span id="UI-Title"></span>
+    </a>
     <div class="container" id="submenu">
         <div class="col s12">
           <div class="card white">
